Modificada lista de caracteristicas y codificación de ficheros

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,7 +1,7 @@
 @Book{rockets,
   author = 	 {El autor},
   ALTeditor = 	 {},
-  title = 	 {El título del libro},
+  title = 	 {El tÃ­tulo del libro},
   publisher = 	 {La editorial},
   year = 	 {2008},
   OPTkey = 	 {},
