--- a/frontmatter_intro.tex
+++ b/frontmatter_intro.tex
@@ -1,16 +1,16 @@
 %
-% Frontmatter - IntroducciÛn. Los miembros del tribunal que juzgan los PFC's tienen muchas m·s memorias que leer, por lo que
-%	agradecer·n cualquier detalle que permita facilitarles la vida. En este sentido, realizar una pequeÒa introducciÛn,
-%	comentar la organizaciÛn y estructura de la memoria y resumir brevemente cada capÌtulo puede ser una buena pr·ctica
-%	que permita al lector centrarse f·cilmente en la parte que m·s le interesa.
+% Frontmatter - Introducci√≥n. Los miembros del tribunal que juzgan los PFC's tienen muchas m√°s memorias que leer, por lo que
+%	agradecer√°n cualquier detalle que permita facilitarles la vida. En este sentido, realizar una peque√±a introducci√≥n,
+%	comentar la organizaci√≥n y estructura de la memoria y resumir brevemente cada cap√≠tulo puede ser una buena pr√°ctica
+%	que permita al lector centrarse f√°cilmente en la parte que m√°s le interesa.
 %
 
-\chapter[IntroducciÛn]{
-	IntroducciÛn
+\chapter[Introducci√≥n]{
+	Introducci√≥n
 }
 
-La introducciÛn es lo primero que se lee, pero habitualmente lo ˙ltimo que se escribe.
-Pues su redacciÛn depende de cÛmo se hayan escrito todas las otras secciones. Normalmente la introducciÛn incluye una descripciÛn muy general del proyecto y termina con un desglose del contenido de la memoria.
+La introducci√≥n es lo primero que se lee, pero habitualmente lo √∫ltimo que se escribe.
+Pues su redacci√≥n depende de c√≥mo se hayan escrito todas las otras secciones. Normalmente la introducci√≥n incluye una descripci√≥n muy general del proyecto y termina con un desglose del contenido de la memoria.
 
 One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, it's a pretty story. Sharing everything with fun, that's the way to be. One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can sound pretty corny. If you've got a problem chum, think how it could be.
 
@@ -33,22 +33,22 @@ In a dolor sed odio eleifend varius. Nam ullamcorper. Curabitur ut erat vulputat
 Aliquam sed orci. Cras adipiscing nisl quis pede. Ut rhoncus. Donec viverra laoreet purus. Phasellus nulla. Vivamus eget eros. In mollis aliquam orci. Proin ullamcorper. Nullam sollicitudin vestibulum lorem. Nunc malesuada sagittis augue. Donec tellus velit, dapibus a, aliquam ac, tincidunt id, lectus. 
 
 
-\paragraph*{CapÌtulo 1.}
+\paragraph*{Cap√≠tulo 1.}
 Phasellus tempor velit nec velit. Proin vitae dui a sapien commodo blandit. Etiam aliquam, sapien vitae fringilla venenatis, lectus sem accumsan orci, eget blandit orci odio et magna. Quisque malesuada, eros vel tempus eleifend, velit enim porttitor sem, eget consequat nulla neque et sapien. Morbi leo. Sed vestibulum lacus. Fusce ut lacus. Phasellus pellentesque pede eu eros. Duis turpis felis, eleifend ut, semper ac, porta nec, sem. Praesent odio. Sed laoreet mollis purus. Praesent vestibulum, velit ut mollis aliquam, quam lectus varius urna, sed ultricies erat nisl ac tortor. Vivamus tempor mauris sit amet nulla. Integer venenatis. Integer sagittis euismod ante. Suspendisse at elit. Duis eget purus nec pede adipiscing auctor. Proin ac est.
 
-\paragraph*{CapÌtulo 2.}
+\paragraph*{Cap√≠tulo 2.}
 Proin condimentum. Maecenas sodales. In ornare nunc a leo. Nam sit amet ligula. Nunc quis urna ac metus imperdiet lobortis. Sed quis ligula. Maecenas blandit pede. Donec lacinia rutrum ligula. Vivamus in metus vel elit pharetra molestie.
 
-\paragraph*{CapÌtulo 3.}
+\paragraph*{Cap√≠tulo 3.}
 Nullam ante lorem, placerat et, egestas nec, pellentesque non, sapien. Donec semper, felis id posuere faucibus, nibh ipsum tincidunt quam, et varius ipsum odio ac neque. In tincidunt dignissim diam. Sed lacus lorem, ornare ut, eleifend vel, pellentesque tempus, augue. Duis eu magna. Mauris libero ante, porttitor vel, lobortis a, mollis ac, sem. Nunc at lectus. Integer ac libero a nisl dignissim mollis. Donec velit neque, vestibulum eget, pulvinar vel, malesuada ut, nisi. Praesent congue tempus quam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 
-\paragraph*{CapÌtulo 4.}
+\paragraph*{Cap√≠tulo 4.}
 Mauris ut odio. Nulla accumsan. Morbi condimentum fermentum purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc dignissim, neque eget convallis pretium, diam tortor fringilla lacus, a laoreet nisl metus eu magna. Cras ut lectus. Etiam accumsan feugiat elit.
 
-\paragraph*{CapÌtulo ...}
+\paragraph*{Cap√≠tulo ...}
 Donec a pede. Proin dolor. Ut nunc ligula, tempor id, ornare sit amet, aliquam et, nibh. In mollis iaculis pede. Vivamus gravida orci eu nisl. Sed nibh sem, consequat at, iaculis non, placerat in, ligula. Praesent id nisi. Nunc pellentesque justo non libero. Sed quis est sit amet purus lobortis blandit. Sed arcu justo, rhoncus condimentum, ullamcorper iaculis, viverra et, nisl.
 
-\paragraph*{CapÌtulo N.}
+\paragraph*{Cap√≠tulo N.}
 Fusce luctus gravida leo. Nullam dignissim arcu ac risus hendrerit rhoncus. Aliquam erat volutpat. Ut mollis, mauris non aliquam luctus, nulla sem aliquam tellus, in consequat augue odio in urna.
 
 %
@@ -62,22 +62,22 @@ In a dolor sed odio eleifend varius. Nam ullamcorper. Curabitur ut erat vulputat
 Aliquam sed orci. Cras adipiscing nisl quis pede. Ut rhoncus. Donec viverra laoreet purus. Phasellus nulla. Vivamus eget eros. In mollis aliquam orci. Proin ullamcorper. Nullam sollicitudin vestibulum lorem. Nunc malesuada sagittis augue. Donec tellus velit, dapibus a, aliquam ac, tincidunt id, lectus. 
 
 
-\paragraph*{CapÌtulo 1.}
+\paragraph*{Cap√≠tulo 1.}
 Phasellus tempor velit nec velit. Proin vitae dui a sapien commodo blandit. Etiam aliquam, sapien vitae fringilla venenatis, lectus sem accumsan orci, eget blandit orci odio et magna. Quisque malesuada, eros vel tempus eleifend, velit enim porttitor sem, eget consequat nulla neque et sapien. Morbi leo. Sed vestibulum lacus. Fusce ut lacus. Phasellus pellentesque pede eu eros. Duis turpis felis, eleifend ut, semper ac, porta nec, sem. Praesent odio. Sed laoreet mollis purus. Praesent vestibulum, velit ut mollis aliquam, quam lectus varius urna, sed ultricies erat nisl ac tortor. Vivamus tempor mauris sit amet nulla. Integer venenatis. Integer sagittis euismod ante. Suspendisse at elit. Duis eget purus nec pede adipiscing auctor. Proin ac est.
 
-\paragraph*{CapÌtulo 2.}
+\paragraph*{Cap√≠tulo 2.}
 Proin condimentum. Maecenas sodales. In ornare nunc a leo. Nam sit amet ligula. Nunc quis urna ac metus imperdiet lobortis. Sed quis ligula. Maecenas blandit pede. Donec lacinia rutrum ligula. Vivamus in metus vel elit pharetra molestie.
 
-\paragraph*{CapÌtulo 3.}
+\paragraph*{Cap√≠tulo 3.}
 Nullam ante lorem, placerat et, egestas nec, pellentesque non, sapien. Donec semper, felis id posuere faucibus, nibh ipsum tincidunt quam, et varius ipsum odio ac neque. In tincidunt dignissim diam. Sed lacus lorem, ornare ut, eleifend vel, pellentesque tempus, augue. Duis eu magna. Mauris libero ante, porttitor vel, lobortis a, mollis ac, sem. Nunc at lectus. Integer ac libero a nisl dignissim mollis. Donec velit neque, vestibulum eget, pulvinar vel, malesuada ut, nisi. Praesent congue tempus quam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 
-\paragraph*{CapÌtulo 4.}
+\paragraph*{Cap√≠tulo 4.}
 Mauris ut odio. Nulla accumsan. Morbi condimentum fermentum purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc dignissim, neque eget convallis pretium, diam tortor fringilla lacus, a laoreet nisl metus eu magna. Cras ut lectus. Etiam accumsan feugiat elit.
 
-\paragraph*{CapÌtulo ...}
+\paragraph*{Cap√≠tulo ...}
 Donec a pede. Proin dolor. Ut nunc ligula, tempor id, ornare sit amet, aliquam et, nibh. In mollis iaculis pede. Vivamus gravida orci eu nisl. Sed nibh sem, consequat at, iaculis non, placerat in, ligula. Praesent id nisi. Nunc pellentesque justo non libero. Sed quis est sit amet purus lobortis blandit. Sed arcu justo, rhoncus condimentum, ullamcorper iaculis, viverra et, nisl.
 
-\paragraph*{CapÌtulo N.}
+\paragraph*{Cap√≠tulo N.}
 Fusce luctus gravida leo. Nullam dignissim arcu ac risus hendrerit rhoncus. Aliquam erat volutpat. Ut mollis, mauris non aliquam luctus, nulla sem aliquam tellus, in consequat augue odio in urna.
 
 
