Modificado lista de características hasta Gestión de Entrenamientos. Falta Gestión Competiciones y test.

--- a/main_010.tex
+++ b/main_010.tex
@@ -171,6 +171,7 @@
 			\hline
 		\end{tabularx}
 	\end{center}
+	
 % subsection navegación_a_ (end)
 
 % 
@@ -545,6 +546,7 @@
 			\hline
 		\end{tabularx}
 	\end{center}
+
 % subsection gestión_de_diario_del_entrenador_c_ (end)
 
 % 
@@ -552,13 +554,13 @@
 %
 \subsection{Gestión de nadadores (D)} % (fold)
 	\label{sub:gestion_de_nadadores}
-
+	
 	\begin{center}
 		\begin{tabularx}{15cm}{|X|}
 			\hline 
-				\bf{LC-D1. Añadir/Eliminar/Modificar nadador}\\
+				\bf{LC-D1. Ver nadadores}\\
 			\hline
-				El entrenador debe poder añadir, eliminar o modificar un nadador al sistema. Cada ficha del nadador tendrá asociado unos datos personales e información generada al introducir datos en las competiciones y test.\\
+				El sistema debe permitir al entrenador ver el listado de nadadores insertados. Listado con los datos más usados para localizar lo más rápido posible a los nadadores. Sirve de interfaz para ver las fichas individuales de los nadadores.\\
 			\hline
 				\it{Prioridad}\\
 			\hline
@@ -570,7 +572,393 @@
 			\hline
 		\end{tabularx}
 	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D2. Añadir/Eliminar/Modificar nadador}\\
+			\hline
+				El entrenador debe poder añadir, eliminar o modificar un nadador. Cada ficha del nadador tendrá asociado unos datos personales e información generada al introducir datos en las competiciones y test.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D3. Añadir fotografía}\\
+			\hline
+				El entrenador debe poder insertar una fotografía del nadador, la cuál se almacenará en el sistema y se mostrará en el perfil.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D4. Exportar nadadores a Excel}\\
+			\hline
+				Los entrenadores pueden enviar a una hoja Excel el listado de nadadores que contiene. Sólo se exportan los datos personales.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D5. Imprimir lista de nadadores}\\
+			\hline
+				El sistema debe permitir al entrenador imprimir el listado de todos los nadadores pertenecientes al entrenador, así como las fichas individuales de cada nadador. En el caso de imprimir fichas individuales, se debe imprimir la información referente a cada prueba de las competiciones y a los test.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D6. Enviar lista de nadadores por email}\\
+			\hline
+				El sistema debe permitir al entrenador enviar por email el listado de todos los nadadores pertenecientes al entrenador, así como las fichas individuales de cada nadador.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D7. Contactar con nadadores vía email}\\
+			\hline
+				El entrenador debe poder enviar email a los nadadores. En caso de ser menores de edad, la dirección de contacto debe ser la de los padres. Puede ser un contacto individual o colectivo.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D8. Estadísticas de los nadadores}\\
+			\hline
+				El sistema debe generar estadísticas acerca de los nadadores. Están relacionadas con el número de nadadores dados de alta en un mismo mes; gráfico para ver la mejora de las marcas individuales de cada nadador; gráfico para ver la mejora en los test realizados.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D9. Cálculo de \%MM de cada nadador}\\
+			\hline
+				El sistema debe calcular los valores de porcentaje respecto a la mejor marca de un nadador. Por ejemplo: 80\% respecto a la mejor marca.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-D10. Búsqueda de nadadores}\\
+			\hline
+				El entrenador debe poder hacer búsquedas sobre los nadadores. Los principales filtros son los nombres y las categorías del nadador.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
 % subsection gestión_de_nadadores_d_ (end)
+
+%
+% Sub Gestión de entrenamientos
+%
+\subsection{Gestión de entrenamientos (E)} % (fold)
+	\label{sub:gestion_de_entrenamientos}
+
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E1. Añadir planificación}\\
+			\hline
+				El entrenador debe poder crear una hoja de cálculo con la planificación de la temporada. Se tienen en cuenta los volúmenes y cargas de los entrenamientos.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E2. Subir planificación}\\
+			\hline
+				El entrenador debe poder subir al sistema un fichero Excel o pdf con la planificación de la temporada. Este fichero servirá para comparar el volumen y carga de los microciclos \footnote{Estructura de organización del entrenamiento que están constituidos por las sesiones de entrenamientos.} y macrociclos \footnote{Estructura de organización del entrenamiento que están constituidos por un conjunto de microciclos.}\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E3. Imprimir planificación}\\
+			\hline
+				El sistema debe permitir al entrenador imprimir la planificación de la temporada, tanto en caso de que se haya creado en el sistema como si se ha subido a la aplicación.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E4. Ver entrenamientos}\\
+			\hline
+				El sistema debe permitir al entrenador ver el listado de entrenamientos insertados. Cada sesión incluye los ejercicios que se realizan en un entrenamiento diario. Puede usarse un calendario para verlo más fácilmente.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E5. Añadir/Modificar/Eliminar entrenamiento}\\
+			\hline
+				El sistema debe permitir al entrenador añadir, modificar o eliminar entrenamientos. Cada entrenamiento consta de una serie de ejercicios que lo forman y representa una sesión de entrenamiento.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E6. Añadir ejercicio al entrenamiento}\\
+			\hline
+				El entrenador debe poder introducir ejercicios en cada uno de los entrenamientos. Cada ejercicio es de un tipo específico.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E7. Exportar entrenamiento a Excel}\\
+			\hline
+				El sistema debe permitir exportar una sesión de entrenamiento a Excel.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E8. Imprimir entrenamientos}\\
+			\hline
+				El entrenador debe poder imprimir sesiones de entrenamientos. Puede seleccionarse un intervalo de sesiones de entrenamientos para proporcionar más usabilidad \footnote{Según ISO/IEC 9126, la usabilidad se refiere a la capacidad de un software de ser comprendido, aprendido, usado y ser atractivo para el usuario, en condiciones específicas de uso.}.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E9. Enviar por mail entrenamiento }\\
+			\hline
+				El entrenador debe poder enviar por email una sesión de entrenamiento a un destinatario introducido.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E10. Estadísticas de los entrenamientos}\\
+			\hline
+				El sistema debe generar estadísticas sobre los entrenamientos. Son referidas al volumen y carga de cada sesión de entrenamiento --- microciclo; al volumen y carga de cada macrociclo; volumen y carga de cada tipo de ejercicio. Estas estadísticas servirán parar compararlas con los datos de la planificación.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E11. Búsqueda de un entrenamiento}\\
+			\hline
+				El entrenador debe poder buscar entre los entrenamientos insertados en la aplicación.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-E12. Cálculo del tiempo de un entrenamiento}\\
+			\hline
+				El sistema debe poder calcular el tiempo en que se tarda en realizar un entrenamiento con los ejercicios insertados. Se tiene que basar en un tiempo medio de los nadadores y en la intensidad en que se realizan los ejercicios.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+% subsection gestión_de_entrenamientos_e_ (end)
 
 % section lista_de_características (end)
 % chapter captura_de_requisitos (end)
