Modificada la lista de características

--- a/Documentacion/main_010.tex
+++ b/Documentacion/main_010.tex
@@ -960,5 +960,253 @@
 	\end{center}
 % subsection gestión_de_entrenamientos_e_ (end)
 
+%
+% Sub Gestión de Competiciones
+%
+\subsection{Gestión de competiciones (F)} % (fold)
+	\label{sub:gestion_de_competiciones}
+
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F1. Ver competiciones}\\
+			\hline
+				Los entrenadores deben poder ver un listado con todas las competiciones que han insertado en el sistema. Están organizadas por fecha, siendo las más recientes primero.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F2. Añadir/Modificar/Eliminar competición }\\
+			\hline
+				Un entrenador debe poder añadir, modificar o eliminar una competición a la aplicación. Cada competición indica el lugar, la fecha, la piscina, el tipo de cronometraje y el tipo de piscina. Se almacenan los resultados de cada nadador en la competición.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F3. Añadir resultado de un nadador }\\
+			\hline
+				El sistema debe permitir al entrenador insertar un resultado de un nadador en la competición. Este resultado se mostrará en la competición y en la ficha del nadador asociado.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F4. Ver calendario}\\
+			\hline
+				El entrenador debe poder ver un calendario con las competiciones. Cada competición añadida al calendario se convertiría en un registro de la lista de competiciones.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F5. Imprimir listado de competiciones}\\
+			\hline
+				El sistema debe permitir a los entrenadores imprimir el listado de las competiciones, así como la ficha de una competición individual. En las competiciones individuales se mostrarán los resultados de cada nadador en ella.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F6. Añadir etiqueta a competición}\\
+			\hline
+				Los entrenadores deben poder añadir etiquetas a las competiciones, con el fin de catalogarlas y gestionarlas mejor.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F7. Buscar competición}\\
+			\hline
+				El sistema debe permitir al entrenador buscar competiciones por nombre, fecha, piscina o etiqueta\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F8. Enviar por email competición}\\
+			\hline
+				El sistema debe permitir enviar los resultados de una competición por email.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-F9. Organizar competiciones}\\
+			\hline
+				El sistema debe permitir al entrenador organizar las listas de competiciones en orden ascendente y descendente.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+% subsection gestión_de_competiciones_f_ (end)
+
+%
+% Sub Gestión de Test
+%
+\subsection{Gestión de Test (G)} % (fold)
+	\label{sub:gestion_de_test}
+
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-G1. Ver test}\\
+			\hline
+				El sistema debe permitir a los entrenadores ver el listado de test insertados en el sistema. Cada test representa un listado de pruebas realizadas sobre los nadadores.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-G2. Añadir/Modificar/Eliminar test}\\
+			\hline
+				El entrenador debe poder añadir, modificar o eliminar test al sistema. Dentro de cada test se incluyen los resultados de cada nadador. Debe existir una opción para poder añadir todos los nadadores de una determinada categoría, y posteriormente modificar el resultado del test. Cada resultado del test se añade al perfil del nadador relacionado.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-G3. Imprimir test}\\
+			\hline
+				El sistema debe permitir al entrenador imprimir el listado de test realizados. Así mismo, se debe dar la opción de imprimir cada test individualmente.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
+				\bf{LC-G4. Enviar por email test}\\
+			\hline
+				El sistema debe permitir al entrenador enviar el listado de los test por email.\\
+			\hline
+				\it{Prioridad}\\
+			\hline
+				\it{Estado}\\
+			\hline
+				\it{Coste}\\
+			\hline
+				\it{Riesgo}\\
+			\hline
+		\end{tabularx}
+	\end{center}
+% subsection gestión_de_test_g_ (end)
 % section lista_de_características (end)
 % chapter captura_de_requisitos (end)
