Modificado comentario en include main_010

--- a/Documentacion/book.tex
+++ b/Documentacion/book.tex
@@ -64,8 +64,7 @@
 	% MAINMATTER: El contenido, capitulo a capitulo, de la memoria.
 	\mainmatter
 
-	%\include{main_010}
-	\include{main_010}
+	\include{main_010} % Captura de requisitos
 	
 	% Referencias bibliograficas
 	\nocite{*}	% Se usa para indicar en la bibliografia las referencias no citadas.
