Modificado nombre de fichero de main_010 a cap_010

--- a/Documentacion/book.tex
+++ b/Documentacion/book.tex
@@ -70,11 +70,11 @@
 	% MAINMATTER: El contenido, capitulo a capitulo, de la memoria.
 	\mainmatter
 
-	\include{main_010} % Captura de requisitos
+	\include{cap_010} % Captura de requisitos
 	
 	% ----------------- Glosario --------------------------- 
 	% Para mostrar todas las entradas aunque no estén referenciadas en el documento
-	\newgloss{default}{.gls}{Glosario}{glsplain}
+	\newgloss{default}{.gls}{Glosario de términos}{glsplain}
 	\gloss[nocite]{*} 		
 	\printgloss{glsbase,glosario}
 
