--- a/Documentacion/bibliografia.bib
+++ b/Documentacion/bibliografia.bib
@@ -1,16 +1,16 @@
 @Book{rockets,
-  author = 	 {El autor},
-  ALTeditor = 	 {},
-  title = 	 {El título del libro},
-  publisher = 	 {La editorial},
-  year = 	 {2008},
-  OPTkey = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  OPTseries = 	 {},
-  OPTaddress = 	 {},
-  OPTedition = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+  	author = 	 {Ivar Jacobson y Grady Booch},
+  	ALTeditor = 	 {},
+  	title = 	 {El Proceso Unificado de Desarrollo de Software / Ivar Jacobson, Grady Booch, James Rumbaugh},
+  	publisher = 	 {Addison Wesley},
+  	year = 	 {2008},
+	series = 		{84-7829-036-2},
+  	OPTkey = 	 {},
+  	OPTvolume = 	 {},
+  	OPTnumber = 	 {},
+  	OPTaddress = 	 {},
+  	OPTedition = 	 {},
+  	OPTmonth = 	 {},
+  	OPTnote = 	 {},
+  	OPTannote = 	 {}
 }
