Añadida introducción a modelo del dominio

--- a/Documentacion/bibliografia.bib
+++ b/Documentacion/bibliografia.bib
@@ -1,10 +1,45 @@
-@Book{rockets,
-  	author = 	 {Ivar Jacobson y Grady Booch},
+@Book{PUJac08,
+  	author = 	 {{Jacobson, I.} y {Booch, G.}},
   	ALTeditor = 	 {},
   	title = 	 {El Proceso Unificado de Desarrollo de Software / Ivar Jacobson, Grady Booch, James Rumbaugh},
   	publisher = 	 {Addison Wesley},
   	year = 	 {2008},
 	series = 		{84-7829-036-2},
+  	OPTkey = 	 {},
+  	OPTvolume = 	 {},
+  	OPTnumber = 	 {},
+  	OPTaddress = 	 {},
+  	OPTedition = 	 {},
+  	OPTmonth = 	 {},
+  	OPTnote = 	 {},
+  	OPTannote = 	 {}
+}
+
+@Book{Fowler96,
+  	author = 	 {{Fowler, M.}},
+  	ALTeditor = 	 {},
+  	title = 	 {Analysis Patterns: reusable Object Models},
+  	publisher = 	 {Addison Wesley},
+  	year = 	 {1996},
+	OPTseries = 		{},
+  	OPTkey = 	 {},
+  	OPTvolume = 	 {},
+  	OPTnumber = 	 {},
+  	OPTaddress = 	 {},
+  	OPTedition = 	 {},
+  	OPTmonth = 	 {},
+  	OPTnote = 	 {},
+  	OPTannote = 	 {}
+}
+
+
+@Book{MO95,
+  	author = 	 {{Martin, J.} y {Odell, J.}},
+  	ALTeditor = 	 {},
+  	title = 	 {Object-Oriented Methods: A Foundation},
+  	publisher = 	 {Prentice-Hall},
+  	year = 	 {1995},
+	OPTseries = 		{},
   	OPTkey = 	 {},
   	OPTvolume = 	 {},
   	OPTnumber = 	 {},
