--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -1207,6 +1207,55 @@
 			\hline
 		\end{tabularx}
 	\end{center}
+	\bigskip % Salto de línea grande
 % subsection gestión_de_test_g_ (end)
 % section lista_de_características (end)
+
+%
+%	Sec Modelo del dominio
+%
+\section{Modelo del dominio} % (fold)
+	\label{sec:modelo_del_dominio}
+
+%
+% Sub Introducción
+%
+\subsection{Introducción} % (fold)
+	\label{sub:md_introduccion}
+	
+	Un modelo del dominio (también conocido como modelo conceptual) explica los conceptos significativos en un dominio del problema; es el artefacto más importante a crear durante el análisis orientado a objetos \footnote{Los caos de uso son un importante artefacto del análisis de requerimientos, pero realmente no están orientados a {\it objetos}. Ponen de relieve la vista del dominio a partir de un proceso.}. 
+	
+	Un {\bf modelo del dominio} es una representación de conceptos en un dominio del problema\cite{Fowler96}\cite{MO95}. En UML, se ilustra con un grupo de {\bf diagramas de estructura estática} donde no se define ninguna operación. La designación de {\it modelo conceptual} ofrece la ventaja de subrayar fuertemente una concentración en los conceptos del dominio, no en las entidades del software.
+	
+	Puede mostrarnos:
+	\begin{itemize}
+		\item{conceptos}
+		\item{asociaciones entre conceptos}
+		\item{atributos de conceptos}
+	\end{itemize}
+	
+	En términos informales el concepto es una idea, cosa u objeto. En un lenguaje más formal podemos considerarlo a partir de un símbolo, intensión \footnote{Intensión: en oposición a extensión, designa el grado de una cualidad.} y extensión \cite{MO95}.
+	
+	\begin{itemize}
+		\item{{\bf Símbolo:} palabras o imágenes que representan un concepto.}
+		\item{{\bf Intensión:} la definición del concepto.}
+		\item{{\bf Extensión:} el conjunto de ejemplos a que se aplica el concepto.}
+	\end{itemize}
+	
+	Los problemas de software a veces son complejos; la descomposición ---divide y vencerás--- es una estrategia que suele utilizarse para resolver la complejidad dividiendo el espacio del problema en unidades comprensibles. En el análisis orientado a objetos la dimensión de la descomposición se lleva a cabo fundamentalmente con conceptos.
+		
+	Por tanto, una tarea primordial de la fase de análisis consiste en identificar varios conceptos en el dominio y documentar los resultados en un modelo conceptual. Una cualidad que debe ofrecer un modelo conceptual es que representa cosas del mundo real, no componentes del software.
+	
+% subsection introducción (end)			
+
+%
+% Sub Contrucción del modelo del dominio
+%
+\subsection{Construcción del modelo del dominio} % (fold)
+	\label{sub:construccion_del_modelo_del_dominio}
+
+% subsection construcción_del_modelo_del_dominio (end)
+
+% section modelo_del_dominio (end)
+
 % chapter captura_de_requisitos (end)
