Comienzo de modelo del dominio

--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -1254,6 +1254,15 @@
 \subsection{Construcción del modelo del dominio} % (fold)
 	\label{sub:construccion_del_modelo_del_dominio}
 
+	El entrenador es la principal figura en el desarrollo deportivo de un equipo de natación, el cual es la persona que se encarga de un grupo de nadadores con el fin de obtener unos resultados a final de temporada. El proceso completo está definido en la figura \ref{fig:modelo_dominio}.
+	
+	 
+	\begin{figure}
+	  \centering
+	    \includegraphics[width=400px]{./eps/captreq_modelo_dominio.eps}
+	  \caption{Diagrama del modelo del dominio}
+	  \label{fig:modelo_dominio}
+	\end{figure}
 % subsection construcción_del_modelo_del_dominio (end)
 
 % section modelo_del_dominio (end)
