--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -1254,15 +1254,47 @@
 \subsection{Construcción del modelo del dominio} % (fold)
 	\label{sub:construccion_del_modelo_del_dominio}
 
-	El entrenador es la principal figura en el desarrollo deportivo de un equipo de natación, el cual es la persona que se encarga de un grupo de nadadores con el fin de obtener unos resultados a final de temporada. El proceso completo está definido en la figura \ref{fig:modelo_dominio}.
+	El dominio del proyecto se sitúa alrededor de un equipo de natación, el cuál está formado por personal que trabaja en él en distintos ámbitos. Sin entrar en detalle, principalmente existe una directiva y un cuerpo técnico, los cuales trabajan para conseguir objetivos en común.  
 	
-	 
+	 A pesar de que los cuerpos técnicos de los equipos están formados por varios integrantes (directores técnicos, técnicos y preparadores físicos), el entrenador es la principal figura en el desarrollo deportivo. Es la persona que se encarga de un grupo de nadadores con el fin de obtener unos resultados a final de temporada. El proceso completo está definido en la figura \ref{fig:modelo_dominio}.
+	
 	\begin{figure}
 	  \centering
 	    \includegraphics[width=400px]{./eps/captreq_modelo_dominio.eps}
 	  \caption{Diagrama del modelo del dominio}
 	  \label{fig:modelo_dominio}
 	\end{figure}
+	
+	El recurso activo más importante en un equipo de natación son los nadadores. Los entrenadores dirigen grupos de nadadores agrupados por categorías, ayudando ello a que se puedan aplicar metodologías de entrenamientos a grupos homogéneos. Es cierto que, a pesar de que este sea el caso ideal, no siempre es posible. Hay veces en los que hay que agrupar a nadadores de diferentes edades para formar grupos. Los ejemplos más comunes que ocasionan esta situación son: la falta de espacio en las instalaciones donde se realizan las sesiones de entrenamientos o la falta de nadadores debido a que es un equipo pequeño. Estas razones son las causantes de que en el modelo del dominio se exprese que un entrenador puede dirigir a cualquier nadador, independientemente de la categoría a la que pertenezca.
+	
+	Para controlar a cada nadador, el entrenador genera fichas que describen a cada uno de los nadadores. En ella se almacenan los datos personales, los datos de contacto y resultados obtenidos en test o competiciones. Sobre esto se hablará posteriormente.
+	
+	Al principio de una temporada y orientado a un grupo de nadadores, el cuerpo técnico realiza una planificación deportiva. El entrenador define un calendario con las competiciones a las cuales se asistirá, lo que conlleva que se marquen las pautas para definir los periodos de una planificación. Entiéndase por periodos la definición de macrociclos, mesociclos y microciclos.
+	
+	\begin{itemize}
+		\item{{\bf Microciclo} es un conjunto de sesiones que tienen un objetivo concreto. Como su nombre indica, son ciclos breves de entrenamiento. Comúnmente, los microciclos hacen referencia a cada sesión de entrenamiento que realice un entrenador.}
+		\item{{\bf Mesociclos} son bloques de microciclos {\bf ordenados} para conseguir un objetivo determinado: representan etapas relativamente acabas del proceso de entrenamiento que permiten asegurar el desarrollo de una capacidad.}
+		\item{{\bf Macrociclo} es un bloque de mesociclos. La idea equivale al concepto de periodo de entrenamiento, los que normalmente suelen ir separados por reposos. } 
+	\end{itemize}
+	
+	Uno de los fines de la planificación es obtener unos niveles de carga y volumen de cada microciclo, o lo que es lo mismo, especificar qué cantidad de metros y a qué intensidad se tienen que realizar cada una de las sesiones de entrenamientos. Es por ello, por lo que una sesión de entrenamiento contiene varios ejercicios de distinta tipología. Cada ejercicio refleja las capacidad que se trabaja, siendo los ejercicios aeróbicos \footnote{Aeróbicos incluyen cualquier tipo de ejercicio que se practique a niveles moderados de intensidad durante periodos de tiempo largos.}, anaeróbicos \footnote{Anaeróbicos comprenden actividades breves basadas en la fuerza.} y de técnica \footnote{La técnica hace referencia a la mejora de cada uno de los estilos de natación.} los más usuales.
+	
+	La especificación de cada ejercicio normalmente está compuesta por bloques, series, distancia, estilo que se nada y detalles más precisos que en el modelo se engloban como {\it observación}. Un ejemplo es {\it 2x(4x100 Mariposa) técnica variada}, el cuál expresa que se realicen 2 bloques de 4 series de 100 metros mariposa, haciendo ejercicios variados de distinta técnica. Esto sumaría un volumen total de 800 metros, generando una carga que se calcula a partir de un parámetro denominado {\it ``índice de Mujika''}.
+	
+	Por otro lado, otro de los fines de la planificación es preparar a los nadadores para las competiciones que se realicen y a las que se hayan decidido asistir. Por ello, se puede decir tanto entrenadores como nadadores asisten a alguna competición celebrada en una fecha y piscina determinada. Es importante reflejar la piscina, puesto que éstas pueden ser de 25 o 50 metros de longitud. Es lógico preguntarse, ¿en qué influye en el nadador la longitud de la piscina? Un nadador recorriendo una misma distancia en piscinas de 25 y de 50 metros, realiza un tiempo total distinto. 
+	
+	Dejando de lado una explicación técnica que explique el motivo, se puede afirmar que en una competición, un nadador puede realizar diferentes pruebas, lo que ocasionaría en una batería de resultados a almacenar en su ficha. El conjunto de todos los resultados de cada competición por cada nadador, forman la relación {\it Competición---Resultado competición}.
+	
+	Debido a que en el control está el éxito, para comprobar las capacidades de cada nadador, un entrenador realiza diferentes pruebas o {\it test}. Éstos pueden ser de diferente tipo, siendo los principales los que miden la resistencia, velocidad y otras capacidad físicas (tales como envergadura, talla o peso). Estas pruebas se realizan a lo largo de la temporada, obteniendo resultados que se almacenan también en la ficha del nadador.
+	
+	    
+	% -----------------------------------------------------------------------------
+	%  NOTA: Añadir al modelo de dominio los tipos de ejercicios e índice e Mujika
+	%	Corregir tilde de Especificación de Ejercicio -> observación
+	% -----------------------------------------------------------------------------
+
+
+	
 % subsection construcción_del_modelo_del_dominio (end)
 
 % section modelo_del_dominio (end)
